--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>avicena-client</title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but avicena-client doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <title>avicena</title>
+  <link rel="icon" type="image/png" href="<%= BASE_URL %>icons/app-logo-128x128.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="<%= BASE_URL %>icons/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="<%= BASE_URL %>icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="<%= BASE_URL %>icons/favicon-96x96.png">
+  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+
+
+
+
+</head>
+
+<body>
+  <noscript>
+    <strong>We're sorry but avicena-client doesn't work properly without JavaScript enabled. Please enable it to
+      continue.</strong>
+  </noscript>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+</body>
+
 </html>
