Hostpital view -- Surgeryroom -- Period -- Honorary

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="utf-8">
@@ -11,10 +11,6 @@
   <link rel="icon" type="image/png" sizes="32x32" href="<%= BASE_URL %>icons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="<%= BASE_URL %>icons/favicon-96x96.png">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-
-
-
-
 </head>
 
 <body>
